--- a/todo.txt
+++ b/todo.txt
@@ -11,3 +11,11 @@ bilderdarstellung der aktivitäten/kategorien wie bei facebook
 suche
 alerts in separatem fenster? ist aufm handy etwas unschön
 profilbild neben oben rechts nutzernamen mit logout
+chatlogentry mit notification nachahmen?
+
+separates icon für chat link neben profil links
+klick auf icon öffnet dropdown
+chats werden nach neuerster nachricht sortiert
+chats haben titel
+klick auf chat führt zur chatseite
+nur chats mit ungelesenen nachrichten werden angezeigt
