--- a/todo.txt
+++ b/todo.txt
@@ -1,21 +1,7 @@
-1. Gruppe wird erstellt
-2. Benachrichtigung wird erzeugt
-3. Falls Freund online, wird Typ und Inhalt an websocket gesendet
-    3b. Ton abspielen nach Typ
-    3c. Alert im Alertfenster oben hinzufügen. Alertfenster: Scrollbar, wegklickbar, alle löschen button
-4. Online gehen: alerts werden immer geladen und angezeigt
-5. bei smartphone: drop down fürs menu UND für die alerts mit orangener zahl, die anzahl angibt
-
 profilbilder
+191, 170 thumbnails
+search engine friendly urls
 bilderdarstellung der aktivitäten/kategorien wie bei facebook
 suche
 alerts in separatem fenster? ist aufm handy etwas unschön
 profilbild neben oben rechts nutzernamen mit logout
-chatlogentry mit notification nachahmen?
-
-separates icon für chat link neben profil links
-klick auf icon öffnet dropdown
-chats werden nach neuerster nachricht sortiert
-chats haben titel
-klick auf chat führt zur chatseite
-nur chats mit ungelesenen nachrichten werden angezeigt
