--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-21 18:51+0000\n"
-"PO-Revision-Date: 2020-12-21 19:58+0100\n"
+"POT-Creation-Date: 2020-12-21 19:04+0000\n"
+"PO-Revision-Date: 2020-12-21 20:04+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -748,6 +748,14 @@ msgid ""
 msgstr ""
 "Does the problem persist in spite of using the correct user name and "
 "password? Maybe your account has been banned."
+
+#: account/templates/registration/login.html:17
+msgid "Willkommen bei myactivities.net! :)"
+msgstr "Welcome to myactivities.net! :)"
+
+#: account/templates/registration/login.html:17
+msgid "Was ist das hier?"
+msgstr "What’s this about?"
 
 #: account/templates/registration/login.html:18
 msgid "Bitte nutzen Sie das folgende Formular zum einloggen:"
