--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-12-21 19:04+0000\n"
-"PO-Revision-Date: 2020-12-21 20:04+0100\n"
+"PO-Revision-Date: 2020-12-21 22:17+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -254,10 +254,11 @@ msgid ""
 "Leerstellen haben. Sie können auch selbst eine Gruppe gründen und so nach "
 "Musikern suchen."
 msgstr ""
-"You can find the activity \"Playing Guitar\" in the category \"Music\", "
-"which has its own site. There you can search for groups filtered by locality "
-"and apply for open vacancies. You can also create your own group, call it "
-"maybe \"Cool Band in <...>\" and create vacancies that others can apply to."
+"You can find the activity \"Playing Guitar\" in the category \"Music\". On "
+"the site of the Music category, you can search for groups filtered by "
+"locality and apply for open vacancies. You can also create your own group, "
+"call it maybe \"Cool Band in <...>\" and create vacancies that others can "
+"apply to."
 
 #: account/templates/account/about.html:16
 msgid ""
