--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 search engine friendly url: (request, id) syntax ändern
 suche
 like funktion für posts
+messages runde nicht möglich
+keine nachricht wenn admin beitritt
 
 DESIGN:
 Bilderliste: Immer 200px breit, wenn möglich mehrere nebeneinander, bild, titel, beschreibung einheitlich, eventuell aufklappbar
