--- a/todo.txt
+++ b/todo.txt
@@ -11,3 +11,5 @@ Lobby:
 Laufende Liste von Nutzern rechts, Liste von Matches links
 trimautowhitespace=false
 autoClosingOvertype=always
+
+DURAK_WEBSOCKET LÖSCHEN, USER_WEBSOCKET REICHT!!
