--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-08 14:13+0000\n"
-"PO-Revision-Date: 2021-02-08 15:13+0100\n"
+"POT-Creation-Date: 2021-02-08 15:04+0000\n"
+"PO-Revision-Date: 2021-02-08 16:04+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -100,6 +100,14 @@ msgstr "User name"
 #, python-brace-format
 msgid "Es gibt keinen Nutzer mit dem Nutzernamen {name}"
 msgstr "There is no user with the user name {name}"
+
+#: account/models.py:18
+msgid "männlich"
+msgstr "male"
+
+#: account/models.py:19
+msgid "weiblich"
+msgstr "female"
 
 #: account/models.py:27
 msgid "hat erstellt"
