--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-08 16:07+0000\n"
+"POT-Creation-Date: 2021-02-08 16:10+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -296,7 +296,7 @@ msgstr ""
 
 #: account/templates/account/about.html:20
 msgid ""
-"Klicken Sie auf den Beitreten-Button unten links um dem Audiochat eines "
+"Klicken Sie auf den Beitreten-Button unten rechts um dem Audiochat eines "
 "Spiels beizutreten!"
 msgstr ""
 
