--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-02-08 16:48+0000\n"
-"PO-Revision-Date: 2021-02-08 17:49+0100\n"
+"PO-Revision-Date: 2021-02-08 17:51+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -328,15 +328,11 @@ msgid ""
 msgstr "Join activities, chat with people in your area and create/read posts!"
 
 #: account/templates/account/about.html:27
-#, fuzzy
-#| msgid ""
-#| "Klicken Sie auf den Beitreten-Button unten rechts um dem Audiochat eines "
-#| "Spiels beizutreten!"
 msgid ""
 "Klicken Sie auf den Beitreten-Button unten rechts, um dem Audiochat eines "
 "Spiels beizutreten!"
 msgstr ""
-"Press the join button in the bottom right corner to join to audio chat of a "
+"Press the join button in the bottom right corner to join the audio chat of a "
 "game!"
 
 #: account/templates/account/destroy_friendship.html:4
