--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-12 17:22+0000\n"
-"PO-Revision-Date: 2021-02-10 21:10+0100\n"
+"POT-Creation-Date: 2021-02-12 17:37+0000\n"
+"PO-Revision-Date: 2021-02-12 18:39+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -337,10 +337,13 @@ msgstr ""
 
 #: account/templates/account/banner.html:29
 msgid ""
-"Diese Seite nutzt Cookies. Blabla.. können Sie im Browser irgendwo deaktivieren.. "
-"Statistiken werden nicht erstellt.. durch Weiternutzen der Seite stimmen sie "
-"zu.."
-msgstr "This site uses cookies. Blabla.. you can deactive them in the browser settings somewhere.. you are not being tracked.. by using this site you accept.."
+"Diese Seite nutzt Cookies. Blabla.. können Sie im Browser irgendwo "
+"deaktivieren.. Statistiken werden nicht erstellt.. durch Weiternutzen der "
+"Seite stimmen sie zu.."
+msgstr ""
+"This site uses cookies. Blabla.. you can deactive them in the browser "
+"settings somewhere.. you are not being tracked.. by using this site you "
+"accept.."
 
 #: account/templates/account/banner.html:31
 msgid "Mir doch egal!"
