--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-12 17:22+0000\n"
+"POT-Creation-Date: 2021-02-12 17:37+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -308,9 +308,9 @@ msgstr ""
 
 #: account/templates/account/banner.html:29
 msgid ""
-"Diese Seite nutzt Cookies. Blabla.. können Sie im Browser deaktivieren.. "
-"Statistiken werden nicht erstellt.. durch Weiternutzen der Seite stimmen sie "
-"zu.."
+"Diese Seite nutzt Cookies. Blabla.. können Sie im Browser irgendwo "
+"deaktivieren.. Statistiken werden nicht erstellt.. durch Weiternutzen der "
+"Seite stimmen sie zu.."
 msgstr ""
 
 #: account/templates/account/banner.html:31
