--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-12 22:49+0000\n"
-"PO-Revision-Date: 2021-02-12 23:51+0100\n"
+"POT-Creation-Date: 2021-02-12 23:19+0000\n"
+"PO-Revision-Date: 2021-02-13 00:21+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -199,68 +199,41 @@ msgstr "County"
 msgid "Stadt"
 msgstr "City"
 
+#: account/templates/account/403.html:7
+msgid "Fehler: 403 - Zugriff verweigert"
+msgstr "Error: 403 - Permission denied"
+
+#: account/templates/account/403.html:8
+msgid "Halt! Kein Zutritt!"
+msgstr "Stop! No admittance!"
+
+#: account/templates/account/403.html:9 account/templates/account/404.html:10
+msgid "Fehlerbeschreibung: "
+msgstr "Error description: "
+
+#: account/templates/account/403.html:10 account/templates/account/404.html:12
+#: account/templates/account/500.html:8
+msgid "Falls Sie das traurig machen sollte, hier ein paar ausgewählte Witze: "
+msgstr "If you’re sad now, here are a few select jokes: "
+
 #: account/templates/account/404.html:7
-msgid "Fehler: 404"
-msgstr "Error: 404"
+msgid "Fehler: 404 - Seite nicht gefunden"
+msgstr "Error: 404 - Page not found"
 
 #: account/templates/account/404.html:8
-msgid ""
-"Die geforderte Seite gibt's anscheinend nicht mehr :( Falls Sie das traurig "
-"machen sollte, hier ein paar ausgewählte Witze: "
-msgstr ""
-"The requested site doesn’t exist anymore :( If you’re sad now, here are a "
-"few select jokes: "
+msgid "Die geforderte Seite gibt's anscheinend nicht mehr :("
+msgstr "The requested site doesn’t exist anymore :( "
 
-#: account/templates/account/404.html:9
-msgid ""
-"Steht son Typ mit seinem Wagen vor der Tanke, schaut sich um, macht den Tank "
-"auf und pinkelt da rein. Da kommt jemand aus der Tankstelle, sieht das ganze "
-"und sagt zu dem Typen: \"Das ist doch nicht normal!\" Sagt er: \"Ne, das ist "
-"super! :)\""
-msgstr ""
-"What’s the best thing about Switzerland? I don’t know, but their flag is a "
-"huge plus."
+#: account/templates/account/500.html:7
+msgid "Fehler: 500 - Server Fehler"
+msgstr "Error: 500 - Server error"
 
-#: account/templates/account/404.html:10
+#: account/templates/account/500.html:8
 msgid ""
-"Frau geht arbeiten, Mann bleibt zuhause, wir kennen dat. Bevor die Frau aber "
-"arbeiten geht sagt sie zu ihrem Mann: Denk dran, dass du mit dem Hund raus "
-"gehst. Der Mann sagt: Jaja, kenn wir auch. Frau geht arbeiten, draußen fängt "
-"dat an zu regnen, denkt der Mann: Da hab ich keine Lust drauf. Macht er "
-"einfach die Tür auf, sodass der Hund dann alleine rausgeht. Kommt der Hund "
-"20 Minuten später wieder und hat n Kaninchen im Maul. Sagt er, oh Mist, das "
-"ist ja das von den Nachbarn. Da macht er es schnell sauber und legt es "
-"drüben wieder zurück in der Käfig. Am nächsten Morgen hat er dann mit seiner "
-"Frau Frühstück, sagt sie: Du, unseren Nachbarn ist was gruseliges passiert! "
-"Sagt er: Nein, erzähl mal! Sie: Das Kaninchen von denen lag gestern tot im "
-"Stall! Sagt er: Oh, wie gruselig! Sie: Das Gruselige ist, das haben die "
-"einen Tag vorher beerdigt!"
+"Da kann entweder jemand nicht programmieren (*HUST*), oder jemand versucht "
+"hier absichtlich einen Fehler zu verursachen."
 msgstr ""
-"Wife goes to work, guy stays home, as usual. Before wifey goes to work, she "
-"reminds him to walk the dog. Guy says sure, as usual. Well, as soon as wifey "
-"leaves, it starts pouring, so the guy’s thinking: Screw this. Opens the "
-"door, dogs runs out, is back fifteen minutes later with a dead rabbit in his "
-"jaws, tail wiggling. Well, shit, isn’t that the neighbor’s? He quickly "
-"cleans the mud off of the poor thing, runs over to the neighbor’s garden and "
-"puts it back in its cage. Next morning, wife says: You know, something "
-"terrible happened. Says he: Oh no, what? She replies: The neighbor’s rabbit "
-"lay in its cage yesterday, dead! Oh no, how horrible, guy replies. What’s "
-"horrible, wifey says, is that they buried it yesterday!"
-
-#: account/templates/account/404.html:11
-msgid ""
-"Typ sitzt inner Kneipe, kommt so ein kleines weißes Pferd vorbeigerannt. "
-"Denkt er sich, was war dat denn, hat sich bestimmt verguckt. Kommt das "
-"kleine Pferd wieder vorbei! Sagt er zum Wirt: Hör mal, was soll das denn "
-"hier mit dem kleinen weißen Pferd? Sagt der Wirt: Hör bloß auf, geh mal "
-"unten runter in den Bierkeller, da hinter dem Gurkenfass, da sitzt eine Fee. "
-"Geh da mal hin und wünsch dir wat, weißte Bescheid. Er geht runter, kommt 20 "
-"Minuten später wieder hoch, hat ne Melone unterm Arm und hinter ihm läuft "
-"ein kleines Schwein. Da sagt er zum Wirt: Hör mal, kann das sein dass die "
-"mich da unten nicht versteht? Ich hab mir eine Million gewünscht, in kleinen "
-"Scheinen! Da sagt er: Ja glaubst du ich hab mir einen 30 Zentimeter langen "
-"Schimmel gewünscht oder was?"
-msgstr "Please send me your jokes. I don’t know any good ones."
+"Either someone can't code (*COUGH*), or you're looking for bugs on purpose."
 
 #: account/templates/account/about.html:6
 msgid "Info"
@@ -587,6 +560,57 @@ msgstr "You are currently a member of the following activities:"
 #: account/templates/account/home.html:21
 msgid "Sie sind zurzeit kein Mitglied einer Aktivität."
 msgstr "You aren't a member of an activity. Why don't you join one? :)"
+
+#: account/templates/account/jokes.html:2
+msgid ""
+"Steht son Typ mit seinem Wagen vor der Tanke, schaut sich um, macht den Tank "
+"auf und pinkelt da rein. Da kommt jemand aus der Tankstelle, sieht das ganze "
+"und sagt zu dem Typen: \"Das ist doch nicht normal!\" Sagt er: \"Ne, das ist "
+"super! :)\""
+msgstr ""
+"What’s the best thing about Switzerland? I don’t know, but their flag is a "
+"huge plus."
+
+#: account/templates/account/jokes.html:3
+msgid ""
+"Frau geht arbeiten, Mann bleibt zuhause, wir kennen dat. Bevor die Frau aber "
+"arbeiten geht sagt sie zu ihrem Mann: Denk dran, dass du mit dem Hund raus "
+"gehst. Der Mann sagt: Jaja, kenn wir auch. Frau geht arbeiten, draußen fängt "
+"dat an zu regnen, denkt der Mann: Da hab ich keine Lust drauf. Macht er "
+"einfach die Tür auf, sodass der Hund dann alleine rausgeht. Kommt der Hund "
+"20 Minuten später wieder und hat n Kaninchen im Maul. Sagt er, oh Mist, das "
+"ist ja das von den Nachbarn. Da macht er es schnell sauber und legt es "
+"drüben wieder zurück in der Käfig. Am nächsten Morgen hat er dann mit seiner "
+"Frau Frühstück, sagt sie: Du, unseren Nachbarn ist was gruseliges passiert! "
+"Sagt er: Nein, erzähl mal! Sie: Das Kaninchen von denen lag gestern tot im "
+"Stall! Sagt er: Oh, wie gruselig! Sie: Das Gruselige ist, das haben die "
+"einen Tag vorher beerdigt!"
+msgstr ""
+"Wife goes to work, guy stays home, as usual. Before wifey goes to work, she "
+"reminds him to walk the dog. Guy says sure, as usual. Well, as soon as wifey "
+"leaves, it starts pouring, so the guy’s thinking: Screw this. Opens the "
+"door, dogs runs out, is back fifteen minutes later with a dead rabbit in his "
+"jaws, tail wiggling. Well, shit, isn’t that the neighbor’s? He quickly "
+"cleans the mud off of the poor thing, runs over to the neighbor’s garden and "
+"puts it back in its cage. Next morning, wife says: You know, something "
+"terrible happened. Says he: Oh no, what? She replies: The neighbor’s rabbit "
+"lay in its cage yesterday, dead! Oh no, how horrible, guy replies. What’s "
+"horrible, wifey says, is that they buried it yesterday!"
+
+#: account/templates/account/jokes.html:4
+msgid ""
+"Typ sitzt inner Kneipe, kommt so ein kleines weißes Pferd vorbeigerannt. "
+"Denkt er sich, was war dat denn, hat sich bestimmt verguckt. Kommt das "
+"kleine Pferd wieder vorbei! Sagt er zum Wirt: Hör mal, was soll das denn "
+"hier mit dem kleinen weißen Pferd? Sagt der Wirt: Hör bloß auf, geh mal "
+"unten runter in den Bierkeller, da hinter dem Gurkenfass, da sitzt eine Fee. "
+"Geh da mal hin und wünsch dir wat, weißte Bescheid. Er geht runter, kommt 20 "
+"Minuten später wieder hoch, hat ne Melone unterm Arm und hinter ihm läuft "
+"ein kleines Schwein. Da sagt er zum Wirt: Hör mal, kann das sein dass die "
+"mich da unten nicht versteht? Ich hab mir eine Million gewünscht, in kleinen "
+"Scheinen! Da sagt er: Ja glaubst du ich hab mir einen 30 Zentimeter langen "
+"Schimmel gewünscht oder was?"
+msgstr "Please send me your jokes. I don’t know any good ones."
 
 #: account/templates/account/pagination.html:6
 msgid "Vorige"
@@ -2225,6 +2249,9 @@ msgstr " %(v0)s ago"
 #: wall/templates/wall/post/post_loop.html:25
 msgid "Kommentieren..."
 msgstr "Comment..."
+
+#~ msgid "Fehler: 404"
+#~ msgstr "Error: 404"
 
 #~ msgid ""
 #~ "Notwendig, um in Ihrer Nähe nach Leuten suchen zu können. Nur für Ihre "
