--- a/todo.txt
+++ b/todo.txt
@@ -41,3 +41,6 @@ vacancy gelöscht redirect zu account bearbeiten?
 bewerbungen & einladungen .list class
 charakterpunkte zu aktivitäten hinzufügen, fragebogen zur Charakterermittlung
 messages in einigen fällen
+onbeforeunload webrtc
+konferenz ohne mikro
+doko 5 chatmiglieder 2x heinz?
