--- a/todo.txt
+++ b/todo.txt
@@ -42,3 +42,4 @@ ich greife an, der andere nachbar schmeißt sofort eine dazu, hat nur noch eine,
 nachricht dass man muss wenn man dran ist
 fertig button nach spielende
 durak resize call
+competitions!!
