--- a/todo.txt
+++ b/todo.txt
@@ -33,4 +33,4 @@ neu drücken button bestätigen
 verhindere caching bei chats um "closed due to suspension" zu vermeiden
 nachricht dass man muss wenn man dran ist
 durak resize call
-competitions!!
+notifications von gelöschten targets mitlöschen (termin erstellt -> termin gelöscht -> keine nachricht insgesamt)
