--- a/character/dependencies/translation/questions.json
+++ b/character/dependencies/translation/questions.json
@@ -86,7 +86,7 @@
 ["ach+", "I work hard."],
 ["exc-", "I would never go hang gliding or bungee jumping."],
 ["dep+", "I feel desperate."],
-["dut+", "I try to follow the rules."],
+["dut+", "I pay my bills on time."],
 ["cau+", "I choose my words with care."],
 ["sym-", "I tend to dislike soft-hearted people."],
 ["dis-", "I waste my time."],
