--- a/character/dependencies/translation/questions_translated.json
+++ b/character/dependencies/translation/questions_translated.json
@@ -86,7 +86,7 @@
 ["ach+", "Ich arbeite hart."],
 ["exc-", "Ich würde niemals Drachenfliegen oder bungee jumping gehen."],
 ["dep+", "Ich fühle mich verzweifelt."],
-["dut+", "Ich versuche, den Regeln zu folgen."],
+["dut+", "Ich bezahle meine Rechnungen rechtzeitig."],
 ["cau+", "Ich wähle meine Worte mit Bedacht."],
 ["sym-", "Ich tendiere dazu, weichherzige Menschen nicht zu mögen."],
 ["dis-", "Ich verschwende meine Zeit."],
