--- a/todo.txt
+++ b/todo.txt
@@ -34,3 +34,4 @@ verhindere caching bei chats um "closed due to suspension" zu vermeiden
 nachricht dass man muss wenn man dran ist
 durak resize call
 notifications von gelöschten targets mitlöschen (termin erstellt -> termin gelöscht -> keine nachricht insgesamt)
+Fehler links kommt rechts spielt ich bin dran ohne karte von rechts zu sehen, er hat wohl done geschickt
