--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-13 13:26+0000\n"
-"PO-Revision-Date: 2021-03-13 16:54+0100\n"
+"PO-Revision-Date: 2021-03-13 16:59+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1234,7 +1234,7 @@ msgstr "Dutifulness"
 
 #: character/templates/javascript/categories.js:40
 msgid "Leistungsstreben"
-msgstr "Intellect"
+msgstr "Achievement-striving"
 
 #: character/templates/javascript/categories.js:41
 msgid "Selbstdisziplin"
