--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-16 11:55+0000\n"
+"POT-Creation-Date: 2021-03-16 19:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1062,27 +1062,27 @@ msgid "Gewichte verteilen"
 msgstr ""
 
 #: character/templates/character/edit_weights.html:34
-#: character/templates/character/overview.html:44
+#: character/templates/character/overview.html:63
 msgid "Neurotizismus"
 msgstr ""
 
 #: character/templates/character/edit_weights.html:40
-#: character/templates/character/overview.html:50
+#: character/templates/character/overview.html:69
 msgid "Extraversion"
 msgstr ""
 
 #: character/templates/character/edit_weights.html:46
-#: character/templates/character/overview.html:56
+#: character/templates/character/overview.html:75
 msgid "Offenheit für Erfahrungen"
 msgstr ""
 
 #: character/templates/character/edit_weights.html:52
-#: character/templates/character/overview.html:62
+#: character/templates/character/overview.html:81
 msgid "Gewissenhaftigkeit"
 msgstr ""
 
 #: character/templates/character/edit_weights.html:58
-#: character/templates/character/overview.html:68
+#: character/templates/character/overview.html:87
 msgid "Verträglichkeit"
 msgstr ""
 
@@ -1091,7 +1091,7 @@ msgid "Speichern"
 msgstr ""
 
 #: character/templates/character/overview.html:5
-#: character/templates/character/overview.html:42
+#: character/templates/character/overview.html:61
 msgid "Charakter"
 msgstr ""
 
@@ -1099,28 +1099,45 @@ msgstr ""
 msgid "Charakterübersicht"
 msgstr ""
 
-#: character/templates/character/overview.html:14
+#: character/templates/character/overview.html:15
 #, python-format
-msgid "Sie haben bisher %(n)s von 120 Fragen beantwortet."
+msgid "Sie haben bisher %(n)s von %(max)s Fragen beantwortet."
 msgstr ""
 
 #: character/templates/character/overview.html:20
 msgid "Zum Fragebogen"
 msgstr ""
 
-#: character/templates/character/overview.html:22
+#: character/templates/character/overview.html:24
+msgid ""
+"Die hier angebotenen Persönlichkeitstests basieren auf <a href=\"https://"
+"ipip.ori.org/newNEOKey.htm\" target=\"_blank\">frei verfügbaren Fragen</a>, "
+"die auf den <a href=\"https://de.wikipedia.org/wiki/Big_Five_(Psychologie)\" "
+"target=\"_blank\">Big Five</a> der Persönlichkeitspsychologie fußen."
+"<br><br>Der offizielle NEO-PI-R Persönlichkeitstest umfasst 240 Fragen. "
+"Weniger Fragen sind zwar schneller zu beantworten, liefern aber ein unter "
+"Wiederholung instabileres Testergebnis."
+msgstr ""
+
+#: character/templates/character/overview.html:29
+#: character/templates/character/overview.html:33
+#: character/templates/character/overview.html:37
+msgid "Fragen"
+msgstr ""
+
+#: character/templates/character/overview.html:41
 msgid "Noch kein Testergebnis!"
 msgstr ""
 
-#: character/templates/character/overview.html:24
+#: character/templates/character/overview.html:43
 msgid "Empfohlene Aktivitäten"
 msgstr ""
 
-#: character/templates/character/overview.html:34
+#: character/templates/character/overview.html:53
 msgid "Score"
 msgstr ""
 
-#: character/templates/character/overview.html:81
+#: character/templates/character/overview.html:99
 msgid "Zurücksetzen"
 msgstr ""
 
@@ -1284,11 +1301,11 @@ msgstr ""
 msgid "Noch keine Gewichte verteilt!"
 msgstr ""
 
-#: character/templates/javascript/overview.js:12
+#: character/templates/javascript/overview.js:14
 msgid "Klicke erneut zum Zurücksetzen."
 msgstr ""
 
-#: character/templates/javascript/quiz.js:5
+#: character/templates/javascript/question120.js:5
 msgid ""
 "Ich kann mit viel Information auf einmal umgehen.Ich misstraue Menschen.Ich "
 "vermeide Menschenansammlungen.Ich vermeide Fehler.Ich breche Regeln.Ich habe "
@@ -1351,8 +1368,165 @@ msgid ""
 "von Künstlern ausgegeben wird."
 msgstr ""
 
-#: character/templates/javascript/quiz.js:16
+#: character/templates/javascript/question240.js:5
+msgid ""
+"Ich kann emotionale Ereignisse verkraften.Ich nutze andere für meine Zwecke."
+"Ich tue Dinge auf die konventionelle Art.Ich kann mit komplexen Problemen "
+"umgehen.Ich werde selten wütend.Ich versuche mir nicht über Hilfsbedürftige "
+"Gedanken zu machen.Ich werde von Gefühlen überwältigt.Ich würde niemals "
+"Steuern hinterziehen.Ich bin selten emotional.Ich mag keine Poesie.Ich lache "
+"laut.Ich erledige Hausarbeiten vernünftig.Ich interessiere mich nicht für "
+"die Probleme anderer.Ich weiß, wie man Dinge erledigt bekommt.Ich bin schwer "
+"kennenzulernen.Ich stürze mich in Aufgaben mit vollem Herzen.Ich störe mich "
+"nicht an schwierigen sozialen Situationen.Ich breche Regeln.Ich würde "
+"niemals Drachenfliegen oder bungee jumping gehen.Ich bleibe im Hintergrund."
+"Ich bin leicht zufriedenzustellen.Ich habe Schwierigkeiten, mit Aufgaben "
+"anzufangen.Ich bin gerne Teil einer Gruppe.Ich nutze Komplimente, um "
+"vorwärts zu kommen.Ich liebe Überraschungspartys.Ich mag mich nicht.Ich bin "
+"selten deprimiert.Ich halte viel von mir selbst.Ich bevorzuge es, allein zu "
+"sein.Ich liebe es zu essen.Ich fange mit Aufgaben direkt an.Ich mag es "
+"nicht, im Zentrum der Aufmerksamkeit zu sein.Ich weiß, was ich kann.Ich "
+"erzähle die Wahrheit.Ich finde, das Recht sollte strikt durchgesetzt werden."
+"Ich handle gerne aus einer Laune heraus.Ich bin ein Gewohnheitsmensch.Ich "
+"widerspreche anderen.Ich verliere mich in meinen Problemen.Ich vermute "
+"versteckte Motive bei anderen.Ich weiß nicht, warum ich einige Dinge tue, "
+"die ich tue.Ich bin schnell genervt.Ich habe Spaß an wilden Fantasieflügen."
+"Ich gebe vor, mich um andere zu sorgen.Ich verliere meine Beherrschung.Ich "
+"vergesse oft, Dinge wieder dahin zu tun, wo sie hingehören.Ich tendiere "
+"dazu, für liberale politische Kandidaten zu wählen.Ich halte mich an die "
+"Regeln.Ich vermeide philosophische Diskussionen.Ich rede nicht gerne über "
+"mich.Ich bin nicht leicht zu amüsieren.Ich bin immer auf dem Sprung.Ich bin "
+"nachtragend.Ich habe Mitleid mit Obdachlosen.Ich bleibe selbst in "
+"angespannten Situationen ruhig.Ich mag die Vorstellung von Veränderung nicht."
+"Ich glaube, dass Menschen im Kern böse sind.Ich fange sofort mit der Arbeit "
+"an.Ich bin sehr zufrieden mit mir selbst.Ich fange Dinge an ohne "
+"nachzudenken.Ich glaube, dass Menschen grundsätzlich moralisch sind.Ich "
+"widerstehe leicht Versuchungen.Ich versuche, andere zu führen.Ich handle "
+"wild und verrückt.Ich bin nicht interessiert an theoretischen Diskussionen."
+"Ich tue Dinge, die ich später bereue.Ich reagiere langsam.Ich räume gerne "
+"auf.Ich beleidige andere Menschen.Ich schaue auf andere herab.Ich beschwere "
+"mich selten.Ich muntere andere auf.Ich werde von Ereignissen überwältigt.Ich "
+"werde nicht leicht von meinen Gefühlen beeinflusst.Ich mache oft Pläne in "
+"letzter Minute.Ich bevorzuge es, während der Nationalhymne aufzustehen.Ich "
+"liebe es, anspruchsvolle Lektüre zu lesen.Ich setze Pläne in die Tat um.Ich "
+"halte meine Versprechen.Es fällt mir schwer, mich ans Werk zu machen.Ich "
+"habe eine schlechte Meinung von mir selbst.Ich bin leidenschaftlich bei "
+"einigen Themen.Ich vertraue anderen.Ich habe Angst, dass ich das Falsche tun "
+"werde.Ich halte meine Meinungen zurück.Ich liebe es, anderen zu helfen.Ich "
+"tagträume selten.Ich liebe Tagträume.Ich habe oft schlechte Laune.Ich "
+"schiebe Entscheidungen auf.Ich mache mir Sorgen um andere.Ich halte andere "
+"auf Distanz.Ich bin anderen gegenüber argwöhnisch.Ich habe eine schwache "
+"Vorstellungskraft.Ich lobe mich selten selbst.Ich sorge dafür, dass sich "
+"andere wohlfühlen.Ich mag es nicht, Aufmerksamkeit auf mich zu ziehen.Ich "
+"besuche gerne neue Orte.Ich fühle mich oft unwohl in der Nähe anderer.Ich "
+"gebe die Fakten falsch wieder.Ich fange gerne neue Dinge an.Ich mag es, "
+"komplexe Probleme zu lösen.Ich schäme mich nicht so leicht.Ich arbeite "
+"gerade genug, um zurechtzukommen. Ich denke, dass zu viel Steuergeld für die "
+"Unterstützung von Künstlern ausgegeben wird.Ich bin selten albern.Ich mag "
+"keine Veränderungen.Ich vermeide Menschenansammlungen.Ich bin selten gereizt."
+"Ich erwärme mich schnell für andere.Ich lasse mich nicht leicht durch "
+"Ereignisse aus der Ruhe bringen.Ich protze niemals.Ich lasse die Dinge ihren "
+"Lauf nehmen.Ich fühle mich bei anderen wohl.Ich versuche, andere zu "
+"beeinflussen.Ich handle ohne nachzudenken.Ich habe einen reichen Wortschatz."
+"Ich kriege schnell Panik.Ich bin nicht hoch motiviert, Erfolg zu haben.Ich "
+"verschlinge einige Dinge geradezu.Ich setze andere unter Druck.Ich bin nicht "
+"leicht zu ärgern.Ich bin leicht eingeschüchtert.Ich denke gerne über Dinge "
+"nach.Ich mag keine Kunst.Ich verliere mich selten in Gedanken.Ich habe Angst "
+"vor vielen Dingen.Ich bin hervorragend in dem, was ich tue.Ich mache mir "
+"keine Sorgen wegen Dingen, die bereits geschehen sind.Ich kann viele Dinge "
+"gleichzeitig bewältigen.Ich habe für jeden ein gutes Wort.Ich denke, "
+"Kriminelle sollten eher Hilfe als Bestrafungen erhalten.Ich denke nicht, "
+"dass es ein wirkliches richtig oder falsch gibt.Ich störe mich nicht so "
+"leicht an Dingen.Ich freue mich wie ein Kind.Ich mag keine Konzerte.Ich "
+"schätze Situationen falsch ein.Ich habe kein Interesse an abstrakten Ideen."
+"Ich habe das Gefühl, dass mein Leben keine klare Richtung hat.Ich liebe "
+"Action.Ich schwelge in meinen Fantasien.Ich erledige Aufgaben reibungslos."
+"Ich sehe nicht die Konsequenzen von Dingen.Ich vermeide Fehler.Ich versuche, "
+"mich selbst zu verstehen.Ich kehre anderen den Rücken zu.Ich breche meine "
+"Versprechen.Ich liebe Ordnung und Regelmäßigkeit.Ich halte mich an den Plan."
+"Ich fühle mich wohl in meiner Haut.Ich bin meistens entspannt.Ich verstehe "
+"Dinge nicht.Ich habe Angst davor, Aufmerksamkeit auf mich zu ziehen.Ich habe "
+"meine Bedürfnisse unter Kontrolle.Ich höre auf mein Gewissen.Ich liebe "
+"Ordnung.Ich befremde andere Menschen.Ich misstraue Menschen.Ich leide unter "
+"der Trauer anderer.Ich glaube, dass andere gute Absichten haben.Ich bringe "
+"mich ins Zentrum der Aufmerksamkeit.Ich genieße Dinge selten im Übermaß.Ich "
+"tue viel in meiner Freizeit.Ich bemerke selten meine emotionalen Reaktionen."
+"Ich handle überstürzt.Ich kann mich durchsetzen.Ich bin oft niedergeschlagen."
+"Ich glaube an das Gute im Menschen.Ich bin immer vorbereitet.Ich suche die "
+"Gefahr.Ich tendiere dazu, weichherzige Menschen nicht zu mögen.Auf Feiern "
+"rede ich mit einer Menge unterschiedlicher Menschen.Ich setze einen hohen "
+"Maßstab für mich und andere.Ich halte mich an meinen gewählten Weg.Ich "
+"reagiere schnell.Ich lasse meine Sachen herumliegen.Ich fühle mich wohl in "
+"ungewohnten Situationen.Ich verschwende meine Zeit.Ich habe Schwierigkeiten, "
+"mir Dinge vorzustellen.Ich zahle es anderen heim.Ich habe Schwierigkeiten, "
+"abstrake Konzepte zu verstehen.Ich mache mir andere zunutze.Ich interessiere "
+"mich für viele Dinge.Ich habe eine Menge Spaß.Ich liebe Blumen.Ich habe eine "
+"scharfe Zunge.Ich kenne die Antworten auf viele Fragen.Ich lache meinen Weg "
+"durchs Leben.Ich habe wenig zu sagen.Ich störe mich nicht an Unordnung.Ich "
+"strahle Freude aus.Ich lasse es gerne ruhig angehen.Ich mag keine "
+"Konfrontationen.Ich bringe andere dazu, meine Pflichten zu erledigen.Ich "
+"glaube an die Wichtigkeit von Kunst.Ich verstehe Menschen nicht, die "
+"emotional werden.Ich habe wenig beizutragen.Ich mag keine laute Musik.Ich "
+"suche Abenteuer.Ich erlebe Gefühle intensiv.Ich wähle meine Worte mit "
+"Bedacht.Ich hasse es, aufdringlich zu wirken.Ich denke, dass ich besser als "
+"andere bin.Ich finde, wir verwöhnen Kriminelle zu sehr.Ich versuche, den "
+"Regeln zu folgen.Ich gehe nicht gerne in Kunstmuseen.Ich bin gerne waghalsig."
+"Ich komme leicht über Rückschläge hinweg.Ich tue mehr als von mir verlangt "
+"wird.Ich schummle, um voranzukommen.Ich glaube, dass es eine wahre Religion "
+"gibt.Ich liebe das Leben.Ich interessiere mich nicht wirklich für andere.Ich "
+"fühle die Emotionen anderer.Ich bin bereits, alles einmal auszuprobieren.Ich "
+"investiere wenig Zeit und Mühe in meine Arbeit.Ich bin schnell gestresst.Ich "
+"fürchte das Schlimmste.Ich denke, dass ich ein durchschnittlicher Mensch bin."
+"Ich kann schwache Leute nicht ab.Ich mache leicht Freunde.Ich nehme mir "
+"gerne Zeit.Ich schätze Kooperation mehr als Wettbewerb.Ich kann andere dazu "
+"überreden, Dinge zu tun.Ich übernehme die Kontrolle.Ich möchte in Ruhe "
+"gelassen werden.Ich bestehe auf Qualität.Ich erfreue mich an der Schönheit "
+"der Natur.Ich mag keine überfüllten Veranstaltungen.Ich bin oft trübsinnig."
+"Ich sehe das Schöne in Dingen, die andere vielleicht nicht bemerken.Ich "
+"nehme Anteil an denen, die es schlechter haben als ich.Ich liebe große "
+"Feiern.Ich ziehe Abwechslung Routine vor.Ich habe das Gefühl, nicht mit "
+"Dingen klarzukommen.Ich werde leicht wütend.Ich fühle mich nur bei Freunden "
+"wohl.Die Gefühle anderer kümmern mich nicht.Ich störe mich nicht an "
+"unordentlichen Menschen.Ich habe eine rege Vorstellungskraft."
+msgstr ""
+
+#: character/templates/javascript/question60.js:5
+msgid ""
+"Ich kann mit viel Information auf einmal umgehen.Ich misstraue Menschen.Ich "
+"vermeide Menschenansammlungen.Ich vermeide Fehler.Ich breche Regeln.Ich habe "
+"selten emotionale Höhen oder Tiefen.Ich involviere andere in dem was ich tue."
+"Ich liebe Blumen.Ich fühle mich wohl in meiner Haut.Ich lasse meine Sachen "
+"herumliegen.Ich bin nicht leicht zu amüsieren.Ich mag keine laute Musik.Ich "
+"lobe mich selten selbst.Ich kehre anderen den Rücken zu.Ich freue mich wie "
+"ein Kind.Ich bleibe im Hintergrund.Ich versuche mir nicht über "
+"Hilfsbedürftige Gedanken zu machen.Ich besuche gerne neue Orte.Ich fühle die "
+"Emotionen anderer.Ich bleibe unter Druck ruhig.Ich schäme mich nicht so "
+"leicht.Ich interessiere mich nicht wirklich für andere.Ich weiß, wie man "
+"Regeln umgehen kann.Ich mag keine Kunst.Ich denke, Kriminelle sollten eher "
+"Hilfe als Bestrafungen erhalten.Ich räume gerne auf.Ich beleidige andere "
+"Menschen.Ich werde leicht wütend.Ich habe meine Bedürfnisse unter Kontrolle."
+"Ich beschwere mich selten.Ich fange Dinge an ohne nachzudenken.Ich bin immer "
+"beschäftigt.Ich weiß, was ich kann.Ich mache mir Sorgen über Dinge.Ich bin "
+"nicht hoch motiviert, Erfolg zu haben.Ich schätze Situationen falsch ein.Ich "
+"leide unter der Trauer anderer.Ich passe mich leicht neuen Situationen an."
+"Ich lasse es gerne ruhig angehen.Ich denke, dass alles gut wird.Ich habe für "
+"jeden ein gutes Wort.Ich vermeide philosophische Diskussionen.Ich bevorzuge "
+"es, während der Nationalhymne aufzustehen.Ich verliere mich selten in "
+"Gedanken.Ich bin leicht zufriedenzustellen.Ich liebe Tagträume.Ich suche "
+"Abenteuer.Ich fühle mich bei anderen wohl.Ich fange mit Aufgaben direkt an."
+"Ich mag mich nicht.Ich übernehme das Kommando.Ich höre auf mein Gewissen.Ich "
+"bin leicht eingeschüchtert.Ich halte mich an die Regeln.Ich werde von "
+"Gefühlen überwältigt.Ich bringe mich ins Zentrum der Aufmerksamkeit.Ich tue "
+"Dinge auf die konventionelle Art.Ich arbeite hart.Ich verschwende meine Zeit."
+"Ich tue Dinge, die ich später bereue."
+msgstr ""
+
+#: character/templates/javascript/quiz.js:23
 msgid "Alle Fragen wurden beantwortet!"
+msgstr ""
+
+#: character/views.py:30
+msgid "Wählen Sie zuerst einen der drei Fragebogen aus, bevor Sie beginnen."
 msgstr ""
 
 #: chat/templates/chat/chat_list.html:7 chat/templates/chat/chat_list.html:11
